更新配置文件

--- a/FieldsBox/src/org/pstale/launcher/SettingsDialog_zh_CN.properties
+++ b/FieldsBox/src/org/pstale/launcher/SettingsDialog_zh_CN.properties
@@ -1,4 +1,4 @@
-frame.title=\u542F\u52A8\u914D\u7F6E
+frame.title=\u7CBE\u7075\u533A\u57DF\u7BA1\u7406\u5668
 
 button.browser=\u6D4F\u89C8
 button.decode=\u89E3\u7801\u56FE\u7247
