重构了解密/加密功能。 添加了WAV文件的解密/加密代码。

--- a/FieldsBox/src/org/pstale/launcher/SettingsDialog_zh_CN.properties
+++ b/FieldsBox/src/org/pstale/launcher/SettingsDialog_zh_CN.properties
@@ -1,8 +1,8 @@
 frame.title=\u7CBE\u7075\u533A\u57DF\u7BA1\u7406\u5668
 
 button.browser=\u6D4F\u89C8
-button.decode=\u89E3\u7801\u56FE\u7247
-button.encode=\u52A0\u5BC6\u56FE\u7247
+button.decode=\u89E3\u7801\u8D44\u6E90
+button.encode=\u52A0\u5BC6\u8D44\u6E90
 button.ok=\u542F\u52A8
 button.cancel=\u53D6\u6D88
 
